# flashcompile

./: .gitignore  CMakeLists.txt  README.md
docs/: performance.md  simulation.md
include/: CMakeLists.txt
include/flash/: CMakeLists.txt
include/flash/Conversion/: CMakelists.txt  Passes.h  Passes.td
include/flash/Dialect/: CMakeLists.txt
include/flash/Dialect/Flash/: CMakeLists.txt  FlashDialect.h  FlashDialect.td  FlashOps.h  FlashOps.td
include/flash/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/AffineToSCF/: AffineToSCF.cpp  CMakelists.txt
lib/Conversion/FlashToLinalg/: CMakelists.txt  FlashToLinalg.cpp
lib/Conversion/LinalgToAffine/: CMakeLists.txt  LinalgToAffine.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Flash/: CMakeLists.txt  FlashDialect.cpp  FlashOps.cpp
lib/Transforms/: CMakeLists.txt  RegisterPasses.cpp
lib/Transforms/GraphOptimzations/: CMakeLists.txt  CSE.cpp  ConstantFolding.cpp  Fusion.cpp
lib/Transforms/LoopOptimizations/: CMakeLists.txt  LoopTiling.cpp
python/: README.md  setup.py
python/examples/: example1_basic.py  example2_benchmark.py  example3_realistic_benchmark.py  example4_correctness.py  example5_caching.py
python/flashcompile/: __init__.py  api.py  benchmark.py  cache.py  const_opt_benchmark.py  core.py  fusion_complete_benchmark.py  optimization_benchmark.py
scripts/: test_fusion_lowering.sh
test/: CMakeLists.txt
test/Conversion/: fusion-to-linalg.mlir
test/Transforms/: constant-fold.mlir  cse.mlir  loop-tiling.mlir
test/integration/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  run_tests.sh  test_all_ops.mlir  test_cnn_block.mlir  test_simple_layer.mlir
test/unit/: CMakeLists.txt  test_dialect.cpp
test/validation/: validate_ops.py
tools/: CMakeLists.txt  flash-compile-and-run.sh
tools/backend-analysis/: compare_ops.sh  theoretical_ai.py
tools/backend_analysis/: analyze_backend.py
tools/flash-opt/: CMakeLists.txt  flash-opt.cpp
tools/optimization-analysis/: analyze_fusion.py  analyze_loops.py
tools/optimzation-analysis/: analyze_constants.py
